--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -1,6 +1,7 @@
 name: Notify Parent Repo Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -10,6 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Compliance Check
+        uses: do-it-ecm/compliance-check@main
+
       - name: Trigger Parent Workflow
         uses: peter-evans/repository-dispatch@v3
         with:
